--- a/src/pages/InsuranceVerification.css
+++ b/src/pages/InsuranceVerification.css
@@ -1,10 +1,3 @@
-.patients-list {
-  margin: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 20px;
-}
-
 .patient-tile {
   position: relative;
   background-color: #ffffff;
@@ -14,7 +7,10 @@
   transition: transform 0.3s ease-in-out;
   cursor: pointer;
   overflow: hidden;
-  height: 220px;
+  height: 180px;
+  width: 350px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .patient-tile:hover {
@@ -53,23 +49,26 @@
   color: #666666;
 }
 
+.patient-form {
+  position: relative;
+}
+
 .patient-buttons {
   position: absolute;
-  bottom: 15px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: space-between;
-  width: calc(100% - 30px);
+  bottom: 0;
+  right: 10px;
 }
 
 .accept-button, .reject-button {
+  width: 100px;
   padding: 8px 16px;
   font-size: 16px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
+  margin-left: 10px;
+  
 }
 
 .accept-button {
@@ -109,7 +108,8 @@
 }
 
 .confirm-button {
-  padding: 10px 20px;
+  width: 50px;
+  padding: 10px 10px;
   font-size: 16px;
   border: none;
   border-radius: 4px;
