--- a/src/pages/InsuranceVerification.css
+++ b/src/pages/InsuranceVerification.css
@@ -138,3 +138,6 @@
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+.textarea{
+  resize: horizontal; /* Allow both vertical and horizontal resizing */
+}
