--- a/src/pages/ExistingPatients.css
+++ b/src/pages/ExistingPatients.css
@@ -1,5 +1,3 @@
-/* ExistingPatients.css */
-
 .patient-list-container {
   padding: 20px;
   background-color: #f9f9f9;
@@ -50,7 +48,7 @@
 .modal {
   position: fixed;
   top: 50%;
-  left: 60%;
+  left: 50%;
   transform: translate(-50%, -50%);
   background: #fff;
   padding: 15px;
@@ -148,49 +146,23 @@
   font-size: 1.3rem;
   color: #007bff; 
 }
-/* ExistingPatients.css */
 
-
-
-.image-modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 90%;
-  max-height: 90%;
-  background: white;
-  padding: 20px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  z-index: 2000;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-}
-
-.image-container {
-  position: relative;
+.image-preview {
+  max-width: 200px; /* Set max-width for smaller image preview */
+  flex: 0 0 200px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  margin-left: 20px; /* Adjust margin to fit better next to form */
 }
 
-.modal-image {
+.image-preview img {
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 200px; /* Set max-height for smaller image preview */
+  margin-bottom: 10px;
 }
 
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+.close-image {
   background: white;
   border: none;
   cursor: pointer;
@@ -198,4 +170,28 @@
   padding: 5px 10px;
   border-radius: 3px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 15px;
+}
+
+.modal-buttons button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+  width: 130px;
+  margin-left: 2px;
+}
+
+.modal-buttons button:hover {
+  background-color: #0056b3;
 }
